[gd_scene load_steps=8 format=3 uid="uid://b1or5j0jfk4j0"]

[ext_resource type="Texture2D" uid="uid://ctc1jyrxih16c" path="res://icon.svg" id="1_jxs7y"]
[ext_resource type="Script" path="res://mats/game_card/adv_card.gd" id="1_lqse0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dns4x"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifpaj"]
bg_color = Color(0.376471, 0.376471, 0.376471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m38fp"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y680j"]
bg_color = Color(0.376471, 0.376471, 0.376471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing = false

[sub_resource type="Theme" id="Theme_sgowv"]
Button/styles/hover = SubResource("StyleBoxFlat_dns4x")
Button/styles/normal = SubResource("StyleBoxFlat_ifpaj")
Button/styles/pressed = SubResource("StyleBoxFlat_m38fp")
Panel/styles/panel = SubResource("StyleBoxFlat_y680j")

[node name="advanced card" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_right = -32.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_sgowv")
script = ExtResource("1_lqse0")

[node name="panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -164.0
offset_right = 256.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2

[node name="img" type="TextureRect" parent="panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 312.0
offset_bottom = 128.0
texture = ExtResource("1_jxs7y")
expand_mode = 1
stretch_mode = 5

[node name="texts" type="VBoxContainer" parent="panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 160.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="tags" type="HFlowContainer" parent="panel/texts"]
layout_mode = 2

[node name="text" type="RichTextLabel" parent="panel/texts"]
layout_mode = 2
size_flags_vertical = 3
text = "dafasa
"

[node name="Label" type="Label" parent="panel"]
layout_mode = 0
offset_left = 320.0
offset_top = 8.0
offset_right = 396.0
offset_bottom = 31.0
text = "AUTHORS"

[node name="sc_a" type="ScrollContainer" parent="panel"]
layout_mode = 0
offset_left = 320.0
offset_top = 32.0
offset_right = 504.0
offset_bottom = 113.0

[node name="auth_cont" type="HFlowContainer" parent="panel/sc_a"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 12

[node name="names" type="HFlowContainer" parent="panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 32.0

[node name="id_mark" type="Label" parent="panel/names"]
layout_mode = 2
text = "ID:
"

[node name="id" type="Label" parent="panel/names"]
layout_mode = 2

[node name="name" type="Label" parent="panel/names"]
layout_mode = 2
text = "game_name"

[node name="release_date" type="Label" parent="panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 136.0
offset_right = 136.0
offset_bottom = 168.0
text = "RELEASE_DATE"

[node name="Label" type="Label" parent="panel/release_date"]
layout_mode = 0
offset_left = 120.0
offset_right = 247.0
offset_bottom = 32.0
text = "12.12.2012"

[node name="prise_txt" type="Label" parent="panel"]
layout_mode = 0
offset_left = 320.0
offset_top = 113.0
offset_right = 432.0
offset_bottom = 136.0
text = "PRICE"

[node name="prise" type="Label" parent="panel/prise_txt"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "165"

[node name="count_lbl" type="Label" parent="panel"]
layout_mode = 0
offset_left = 320.0
offset_top = 137.0
offset_right = 392.0
offset_bottom = 160.0
text = "COUNT"

[node name="count" type="Label" parent="panel/count_lbl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 40.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "13455"

[node name="close" type="Button" parent="panel"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_top = -40.0
offset_right = 32.0
offset_bottom = -8.0
focus_mode = 0
text = "X"

[node name="Panel" type="Panel" parent="panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = -48.0
offset_bottom = -8.0
grow_horizontal = 0

[node name="op" type="OptionButton" parent="panel/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = -48.0
offset_right = -88.0
offset_bottom = -8.0
grow_horizontal = 0
focus_mode = 0
alignment = 1

[node name="insert" type="Button" parent="panel/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "+"

[node name="count" type="SpinBox" parent="panel/Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -131.062
offset_top = -16.0
offset_right = -48.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
min_value = 1.0
value = 1.0
allow_greater = true

[node name="Label" type="Label" parent="panel/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_right = 112.0
offset_bottom = 12.0
grow_vertical = 2
text = "COUNT"
horizontal_alignment = 2

[connection signal="button_down" from="panel/close" to="." method="_on_close_button_down"]
[connection signal="button_down" from="panel/Panel/insert" to="." method="_on_insert_button_down"]
